feature/#134: Weakness에 대한 개수 제한 설정(3가지가 아니면 예외 처리)